Fix css issue with comment submit form not showing in Safari

--- a/app/assets/stylesheets/api/tasks.css
+++ b/app/assets/stylesheets/api/tasks.css
@@ -10,7 +10,6 @@ button:focus {outline:0;}
 
 .task-index {
   width: 55%;
-  height: 98%;
   min-width: 560px;
   overflow-y:scroll;
   border: 0.2px solid rgba(205, 207, 210, 0.78);
@@ -19,7 +18,6 @@ button:focus {outline:0;}
   padding-left: 50px;
   padding-right: 50px;
   margin-top: 1%;
-  margin-bottom: 25px;
   margin-left: 1%;
   margin-right: 0.5%;
   overflow: auto;
@@ -30,11 +28,9 @@ button:focus {outline:0;}
 .task-detail {
   display: flex;
   width: 50%;
-  height: 98%;
   border: 1px solid #cdcfd2;
   border-radius: 3px;
   margin-top: 1%;
-  margin-bottom: 25px;
   margin-left: 0.5%;
   margin-right: 1%;
   flex-direction: column;
